# rapidchart-mcp

./: .gitignore  CURSOR_SETUP.md  README.md  RELEASE_GUIDE.md  pyproject.toml  release.sh
examples/: cursor-config.json  usage-examples.md
src/rapidchart_mcp/: config.py
src/rapidchart_mcp/tools/: executors.py
