[project]
name = "rapidchart_mcp"
version = "0.1.0"
description = "MCP server for RapidChart - Generate diagrams from code in Cursor"
authors = [
    {name = "RapidChart Team", email = "hello@rapidchart.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://rapidchart.com"
Repository = "https://github.com/Samicostox/rapidchart-mcp"
Documentation = "https://docs.rapidchart.com/mcp"

[project.scripts]
rapidchart-mcp = "rapidchart_mcp.__main__:main"

[build-system]
requires = ["setuptools>=61.0,<69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

